# esp-keepalive

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/db/: mod.rs  model.rs
src/device/: mod.rs
src/handler/: get_device.rs  mod.rs  notfound.rs  post_device.rs
src/log/: mod.rs
src/response/: mod.rs
src/router/: mod.rs  notfound.rs  openapi.rs
src/router/v1/: device.rs  mod.rs
